# django-evolution

./: conftest.py  pyproject.toml  steps.json  tox.ini
.buildkite/: generate_pipeline.py  pipeline.yml
django_evolution/: __init__.py  conf.py  consts.py  deprecation.py  diff.py  errors.py  mock_models.py  models.py  placeholders.py  serialization.py  signals.py  signature.py  support.py
django_evolution/builtin_evolutions/: auth_delete_message.py  session_expire_date_db_index.py
django_evolution/compat/: commands.py  models.py  pickle.py
django_evolution/compat/patches/: __init__.py  sqlite_legacy_alter_table.py
django_evolution/db/: __init__.py  common.py  mysql.py  postgresql.py  sql_result.py  sqlite3.py  state.py
django_evolution/evolve/: __init__.py  base.py  evolve_app_task.py  evolver.py  purge_app_task.py
django_evolution/management/: __init__.py
django_evolution/management/commands/: evolution-project-sig.py  evolve.py  mark-evolution-applied.py  migrate.py  syncdb.py
django_evolution/mutations/: add_field.py  base.py  change_field.py  change_meta.py  delete_field.py  delete_model.py  move_to_django_migrations.py  rename_app_label.py  rename_field.py  rename_model.py  sql_mutation.py
django_evolution/mutators/: app_mutator.py  base.py  model_mutator.py  sql_mutator.py  upgrade_method_mutator.py
django_evolution/tests/: base_test_case.py  decorators.py  test_add_field.py  test_change_field.py  test_change_meta.py  test_conf.py  test_database_state.py  test_delete_app.py  test_delete_field.py  test_diff.py  test_evolution_graph.py  test_evolution_models.py  test_evolver.py  test_generics.py  test_migration_utils.py  test_model_mutator.py  test_move_to_django_migrations.py  test_preprocessing.py  test_rename_field.py  test_rename_model.py  test_serialization.py  test_signature.py  test_sql_mutation.py  test_utils_apps.py  test_utils_models.py  utils.py
django_evolution/tests/db/: mysql.py  postgresql.py  sqlite3.py
django_evolution/tests/evolutions_app2/evolutions/: test_evolution.py
django_evolution/tests/migrations_app/migrations/: 0001_initial.py  0002_add_field.py
django_evolution/tests/migrations_app2/migrations/: 0001_initial.py
django_evolution/tests/move_to_migrations_app/migrations/: 0001_initial.py  0002_add_field2.py
django_evolution/utils/: apps.py  db.py  evolutions.py  graph.py  migrations.py  models.py  sql.py
docs/: conf.py
docs/coderef/: index.rst
tests/: runtests.py  settings.py
