[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'django_evolution'
description = 'A database schema evolution tool for the Django web framework'
authors = [
    { name = 'Beanbag, Inc.', email = 'questions@beanbaginc.com' },
]
license = 'BSD-3-Clause-Clear'
readme = 'README.rst'
dynamic = ['version']
requires-python = '>=3.10'

dependencies = [
    'Django>=4.0,<6.0.999',
    'typing_extensions>=4.12.2',
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Framework :: Django',
    'Framework :: Django :: 4',
    'Framework :: Django :: 4.0',
    'Framework :: Django :: 4.1',
    'Framework :: Django :: 4.2',
    'Framework :: Django :: 5',
    'Framework :: Django :: 5.0',
    'Framework :: Django :: 5.1',
    'Framework :: Django :: 5.2',
    'Framework :: Django :: 6',
    'Framework :: Django :: 6.0',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Database',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
Documentation = 'https://django-evolution.readthedocs.io/en/latest/'
Repository = 'https://github.com/beanbaginc/django-evolution.git'
GitHub = 'https://github.com/beanbaginc/django-evolution/'


[tool.basedpyright]
enableTypeIgnoreComments = true
pythonVersion = "3.10"
reportAny = "none"
reportCallInDefaultInitializer = "none"
reportConstantRedefinition = "none"
reportExplicitAny = "none"
reportIgnoreCommentWithoutRule = "none"
reportImplicitOverride = "none"
reportImplicitStringConcatenation = "none"
reportImportCycles = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportMissingParameterType = "none"
reportMissingSuperCall = "none"
reportMissingTypeStubs = "none"
reportPrivateUsage = "none"
reportUnannotatedClassAttribute = "none"
reportUninitializedInstanceVariable = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryIsInstance = "none"
reportUnsafeMultipleInheritance = "none"
reportUnusedCallResult = "none"
reportUnusedParameter = "none"


[tool.isort]
combine_as_imports = true
include_trailing_comma = true
lines_after_imports = 2
multi_line_output = 3


[tool.pytest]
python_files = ['tests.py', 'test_*.py', '*_tests.py']
testpaths = ['django_evolution']
addopts = ['-r', 'sfE', '-p', 'no:django']
pythonpath = ['.']
required_plugins = ['pytest-env']


[tool.ruff]
line-length = 79
preview = true
target-version = "py310"


[tool.ruff.lint]
extend-select = ["ANN", "COM", "C4", "D", "DJ", "DTZ", "E", "F", "FA", "G", "INT", "LOG", "N", "PIE", "PL", "PT", "Q", "RET", "RUF", "SIM", "TC", "UP", "W"]
ignore = ["ANN002", "ANN003", "ANN401", "D200", "D203", "D205", "D213", "D301", "D400", "D405", "D406", "D407", "D413", "D415", "DJ001", "DJ007", "DJ012", "N812", "PIE790", "PLC0415", "PLC1901", "PLR09", "PLR1702", "PLR2004", "PLR5501", "PLR6301", "PLW0603", "PLW2901", "PT009", "PT027", "RET505", "RET506", "RET507", "RET508", "RUF012", "RUF031", "SIM105", "SIM108", "TC006", "UP012", "UP013", "UP015", "UP031"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
    "assertAppliedMigrations",
    "assertEvolutionsEqual",
    "assertSQLMappingEqual",
    "shortDescription",
]

[tool.ruff.lint.per-file-ignores]
"conftest.py" = ["E402"]
"docs/conf.py" = ["E402"]
"tests/settings.py" = ["E402"]

[tool.ruff.lint.pycodestyle]
max-line-length = 79

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.ruff]


[tool.setuptools.dynamic]
version = { attr = 'django_evolution.__version__' }
